[package]
name = "roadway-rust-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24.1", features = ["default_fonts"] }
egui = "0.24.1"
winapi = { version = "0.3.9", features = ["winuser", "windef", "wingdi", "winbase", "errhandlingapi", "processthreadsapi", "libloaderapi"] }